# GalAirport

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
live2d/KasuganoSora/: model.json  model0.json  motions_idle_$values_0_file_0  motions_tap_body_$values_0_file_0  motions_tap_head_$values_0_file_0  motions_tap_skirt_$values_0_file_0
live2d/Nanami/: model0.json
live2d/NeneAyachi/: model0.json
scripts/: deploy.ps1
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CollectionDialog.tsx  FortuneDialog.tsx  GameCard.tsx  GameDetail.tsx  GameForm.tsx  GameListRow.tsx  HelpDialog.tsx  ScanDialog.tsx  SettingsDialog.tsx  Sidebar.tsx  StatusDropdown.tsx  Toast.tsx  Toolbar.tsx  VndbMatchDialog.tsx  WalkthroughDialog.tsx
src/components/Live2DWidget/: Bubble.tsx  index.tsx  messages.ts  models.ts
src/hooks/: useAppearance.tsx  useGameLibrary.ts  useSmartCrop.ts  useTheme.tsx
src/lib/: database.ts  deepseek.ts  utils.ts  vndb.ts
src/types/: game.ts
tools/: openai_test.js
tools/Magpie-v0.12.1-x64/: resources.pri
